--- a/build.gradle
+++ b/build.gradle
@@ -1,101 +1,57 @@
 plugins {
-    id 'fabric-loom' version '1.6-SNAPSHOT'
-    id 'maven-publish'
-    id 'java'
+  id 'java'
+  id 'fabric-loom' version '1.6-SNAPSHOT'
 }
 
-version = project.mod_version
 group = project.maven_group
+version = project.mod_version
 
 repositories {
-    // Add repositories to retrieve artifacts from in here.
-    // You should only use this when depending on other mods because of Loom's dependency management.
-    // Add maven repositories where you can retrieve artifacts.
-    // mavenLocal()
-    maven {
-        name = "Fabric"
-        url = "https://maven.fabricmc.net/"
-    }
-    maven {
-        name = "Modrinth"
-        url = "https://api.modrinth.com/maven"
-    }
-    maven {
-        name = "JitPack"
-        url = "https://jitpack.io"
-    }
+  maven { url = "https://maven.fabricmc.net/" }                    // Fabric
+  maven { url = "https://api.modrinth.com/maven" }                 // SVC mod (dev runtime)
+  maven { url = "https://maven.maxhenkel.de/repository/public" }   // SVC API
+  mavenCentral()
 }
 
 dependencies {
-    // Fabric API
-    modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    
-    // Simple Voice Chat API
-    modImplementation "de.maxhenkel.voicechat:voicechat-api:${project.svc_version}"
-    
-    // Native audio processing
-    implementation 'com.github.wendykierp:JTransforms:3.1'
-    
-    // JSON processing
-    implementation 'com.google.code.gson:gson:2.10.1'
-    
-    // Logging
-    implementation 'org.slf4j:slf4j-api:2.0.9'
-}
+  minecraft "com.mojang:minecraft:${minecraft_version}"
+  mappings loom.officialMojangMappings()
+  modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
+  modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
 
-processResources {
-    inputs.property "version", project.version
-    filteringCharset "UTF-8"
-
-    filesMatching("fabric.mod.json") {
-        expand "version": project.version
-    }
-}
-
-def targetJavaVersion = 17
-tasks.withType(JavaCompile).configureEach {
-    // ensure that the encoding is set to UTF-8, no matter what the system default is
-    // this fixes some edge cases with special characters not displaying correctly
-    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-    // If Javadoc is generated, this must be specified in that task too.
-    it.options.encoding = "UTF-8"
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        it.options.release = targetJavaVersion
-    }
+  // Simple Voice Chat - API is a plain library; bring the mod at dev runtime so addon entrypoint loads
+  implementation "de.maxhenkel.voicechat:voicechat-api:${svc_version}"
+  modRuntimeOnly "maven.modrinth:simple-voice-chat:fabric-${svc_version}"
 }
 
 java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaToolchainSpec.LanguageVersion.of(targetJavaVersion)
-    }
-    archivesBaseName = project.archives_base_name
-    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-    // if it is present.
-    // If you remove this line, sources will not be generated.
-    withSourcesJar()
+  toolchain { languageVersion = JavaLanguageVersion.of(17) }
+  withSourcesJar()
 }
 
-jar {
-    from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}"}
+loom {
+  runs {
+    client {
+      client()
+      setConfigName("YellSpells Client")
+      ideConfigGenerated(true)
     }
+    server {
+      server()
+      setConfigName("YellSpells Server")
+      ideConfigGenerated(true)
+    }
+  }
 }
 
-// configure the maven publication
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-        }
-    }
+tasks.withType(JavaCompile).configureEach {
+  options.release = 17
+  options.encoding = "UTF-8"
+}
 
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-    repositories {
-        // Add repositories to publish to here.
-        // Notice: This block does NOT have the same function as the block in the top level.
-        // The repositories here will be used for publishing your artifact, not for
-        // retrieving dependencies.
-    }
+processResources {
+  inputs.property "version", project.version
+  filesMatching("fabric.mod.json") {
+    expand project.properties
+  }
 }
