--- a/gradle.properties
+++ b/gradle.properties
@@ -8,11 +8,12 @@ yarn_mappings=1.21.8+build.1
 loader_version=0.15.0
 
 # Mod Properties
-mod_version=1.0.0
 maven_group=com.yellspells
+mod_version=0.1.0
 archives_base_name=yellspells
 
 # Dependencies
 fabric_version=0.131.0+1.21.8
-fabric_loader_version=0.15.0
-svc_version=2.5.0+1.21.8
+fabric_loader_version=0.15.11
+fabric_api_version=0.131.0+1.21.1
+svc_version=2.5.26
