--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
   id 'java'
-  id 'fabric-loom' version '1.6-SNAPSHOT'
+  id 'fabric-loom' version '1.11.5'
 }
 
 group = project.maven_group
@@ -8,7 +8,11 @@ version = project.mod_version
 
 repositories {
     maven { name = "Fabric";    url = "https://maven.fabricmc.net/" }
-    maven { name = "Modrinth";  url = "https://api.modrinth.com/maven" }           // SVC mod at dev runtime
+    maven {
+        name = "Modrinth"
+        url = "https://api.modrinth.com/maven"
+        content { includeGroup "maven.modrinth" }
+    }
     maven { name = "MaxHenkel"; url = "https://maven.maxhenkel.de/repository/public" } // SVC API
     mavenCentral()
 }
@@ -18,13 +22,17 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
 
-    // Simple Voice Chat
-    implementation "de.maxhenkel.voicechat:voicechat-api:${svc_version}"                // API is a normal library
-    modRuntimeOnly "maven.modrinth:simple-voice-chat:fabric-${svc_version}"             // bring the mod in runClient
+    // Minecraft
+    minecraft "com.mojang:minecraft:${minecraft_version}"
+    mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
+
+    // Simple Voice Chat API and dev runtime mod
+    implementation "de.maxhenkel.voicechat:voicechat-api:${voicechat_api_version}"
+    modRuntimeOnly "maven.modrinth:simple-voice-chat:fabric-${voicechat_version}"
 }
 
 java {
-  toolchain { languageVersion = JavaLanguageVersion.of(17) }
+  toolchain { languageVersion = JavaLanguageVersion.of(21) }
   withSourcesJar()
 }
 
@@ -44,7 +52,7 @@ loom {
 }
 
 tasks.withType(JavaCompile).configureEach {
-  options.release = 17
+  options.release = 21
   options.encoding = "UTF-8"
 }
 
