--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.parallel=true
 # Fabric Properties
 minecraft_version=1.21.8
 yarn_mappings=1.21.8+build.1
-loader_version=0.15.0
+loader_version=0.17.2
 
 # Mod Properties
 maven_group=com.yellspells
@@ -14,6 +14,8 @@ archives_base_name=yellspells
 
 # Dependencies
 fabric_version=0.131.0+1.21.8
-fabric_loader_version=0.15.11
-fabric_api_version=0.131.0+1.21.1
-svc_version=2.5.26
+fabric_loader_version=0.17.2
+
+# Simple Voice Chat
+voicechat_api_version=2.5.36
+voicechat_version=1.21.8-2.5.36
